--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "greent/handle-array",
     "type": "library",
     "license": "MIT",
+    "version": "1.0.0",
     "autoload": {
         "psr-4": {
             "Greent\\HandleArray\\": "src/"
